src/components/TableReader.module.css
.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-top: 1rem;
  overflow: hidden;
  border-radius: 0.5rem;
  border: 1px solid #e5e7eb; /* gray-200 */
}

.table {
  width: 100%;
  height: 100%;
  border-collapse: collapse;
}

.thead {
  background-color: #18181b; /* zinc-900 */
  color: white;
  position: sticky;
  top: 0;
  z-index: 10;
}

.th {
  padding: 0.75rem 1rem; /* px-4 py-3 */
  text-align: left;
  font-size: 0.875rem; /* text-sm */
  font-weight: 600; /* font-semibold */
  white-space: nowrap;
}

.th_content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.tbody {
  background-color: white;
}

.tr {
  transition: background-color 0.2s;
  min-height: 0.5rem;
  height: 0.5rem;
}

.tr:hover {
  filter: brightness(160%);
}

.td {
  padding: 0;
  border-right: 1px solid #e5e7eb; /* border-gray-200 */
  border-bottom: 1px solid #e5e7eb;
}

.tdIndex {
  padding: 0.75rem 1rem;
  font-size: 0.875rem;
  color: #4b5563; /* gray-600 */
  font-weight: 500;
  border-right: 1px solid #e5e7eb;
  position: sticky;
  left: 0;
  background-color: white;
  border-right: 1px solid #e5e7eb; /* gray-200 */
  border-bottom: 1px solid #e5e7eb; /* gray-200 */
}

.input {
  min-width: 12rem; /* w-48 */
  color: black;
  padding: 0.75rem 1rem;
  font-size: 0.875rem;
  border: 1px solid transparent;
  outline: none;
  background-color: transparent;
  pointer-events: none;
}

.tooltip {
  position: relative;
  display: flex;
  align-items: center;
}

.tooltip::after {
  content: attr(data-tooltip);
  position: absolute;
  top: 125%;
  right: 0;
  background-color: #333;
  color: #fff;
  padding: 0.5rem;
  border-radius: 0.25rem;
  font-size: 0.75rem;
  font-weight: 400;
  white-space: pre-wrap;
  width: max-content;
  max-width: 200px;
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.2s;
  z-index: 100;
  pointer-events: none;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1);
}

.tooltip:hover::after {
  visibility: visible;
  opacity: 1;
}

.cellError {
  background-color: rgba(230, 37, 23, 0.15);
  color: #ef4444;
}

